--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       </a>
       <div class="header item borderless">
         <h1 class="ui header">
-          Angular 2 Simple Reddit
+          Angular Simple Reddit App
         </h1>
       </div>
     </div>
